--- a/index.html
+++ b/index.html
@@ -3,60 +3,192 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Frame to Your Photo</title>
+  <title>নজরুল বিশ্ববিদ্যালয় সাংবাদিক ফোরাম</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f2f2f2;
-      padding: 30px;
-    }
-    h2 {
-      margin-bottom: 15px;
+      margin: 0;
+      font-family: 'Noto Serif Bengali', sans-serif;
+      background: linear-gradient(to bottom, #f5f7fa, #c3cfe2);
       color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      padding: 0 20px;
     }
+
+    header {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    header img {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      margin-bottom: 15px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+      font-weight: 700;
+      color: #0070f3;
+    }
+
+    header p {
+      margin-top: 10px;
+      font-size: 1em;
+      color: #555;
+      max-width: 600px;
+    }
+
+    main {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 500px;
+    }
+
     canvas {
       margin-top: 20px;
-      border-radius: 12px;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
       max-width: 100%;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      background: white;
+      transition: transform 0.3s;
     }
-    input[type=file] {
-      margin: 15px 0;
+
+    canvas:hover {
+      transform: scale(1.02);
     }
-    button {
+
+    input[type=file], input[type=range], button {
+      width: 100%;
       margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 16px;
+    }
+
+    input[type=file] {
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      background: #fff;
       cursor: pointer;
-      border: none;
-      border-radius: 8px;
-      background: #0070f3;
-      color: white;
+    }
+
+    input[type=range] {
+      -webkit-appearance: none;
+      height: 8px;
+      border-radius: 5px;
+      background: #ddd;
+      outline: none;
       transition: 0.3s;
     }
+
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: #0070f3;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      transition: 0.3s;
+    }
+
+    input[type=range]:active::-webkit-slider-thumb {
+      transform: scale(1.2);
+    }
+
+    button {
+      padding: 12px 20px;
+      font-size: 1em;
+      border: none;
+      border-radius: 12px;
+      background: #0070f3;
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+
     button:hover {
       background: #0059c1;
+      transform: translateY(-2px);
+    }
+
+    footer {
+      margin-top: 50px;
+      color: #666;
+      font-size: 0.9em;
+      text-align: center;
+      max-width: 600px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 { font-size: 1.6em; }
+      header p { font-size: 0.95em; }
     }
   </style>
 </head>
 <body>
-  <h2>🎉 Add Your Photo to Our Frame</h2>
-  <input type="file" id="upload" accept="image/*">
-  <br>
-  <canvas id="canvas"></canvas>
-  <br>
-  <button id="downloadBtn" style="display:none;">Download Photo</button>
+  <header>
+    <img src="logo.png" alt="Logo"> <!-- Replace with your logo -->
+    <h1>সত্যের পথে, সাহসের ডাকে, শিক্ষার্থীদের পক্ষে ৩য় বর্ষে যাত্রা</h1>
+    <p>Upload your photo, adjust it, and add our custom frame. Download your new photo and share it with friends!</p>
+  </header>
+
+  <main>
+    <input type="file" id="upload" accept="image/*">
+    <label for="zoom">Zoom:</label>
+    <input type="range" id="zoom" min="1" max="3" step="0.01" value="1">
+    <canvas id="canvas"></canvas>
+    <button id="downloadBtn" style="display:none;">ডাউনলোড করুন</button>
+  </main>
+
+  <footer>
+    &copy; Created by Aniruddha Sajjad
+  </footer>
 
   <script>
     const upload = document.getElementById("upload");
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const downloadBtn = document.getElementById("downloadBtn");
+    const zoomSlider = document.getElementById("zoom");
 
-    // Load frame image
-    const frame = new Image();
-    frame.src = "frame.png"; // Your frame file must be in same folder
+    let uploadedImg = null;
+    let frame = new Image();
+    frame.src = "frame.png"; // Your frame file in same folder
+    let scale = 1;
+
+    function drawImage() {
+      if (!uploadedImg) return;
+
+      // Determine square size (smallest of width/height)
+      const size = Math.min(uploadedImg.width, uploadedImg.height);
+      const sx = (uploadedImg.width - size / scale) / 2;
+      const sy = (uploadedImg.height - size / scale) / 2;
+      const drawSize = size;
+
+      canvas.width = drawSize;
+      canvas.height = drawSize;
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(uploadedImg, sx, sy, size / scale, size / scale, 0, 0, drawSize, drawSize);
+
+      if (frame.complete) {
+        ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+      } else {
+        frame.onload = () => {
+          ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+        };
+      }
+    }
 
     upload.addEventListener("change", (e) => {
       const file = e.target.files[0];
@@ -66,28 +198,18 @@
       reader.onload = function(event) {
         const img = new Image();
         img.onload = function() {
-          // Set canvas size same as uploaded photo
-          canvas.width = img.width;
-          canvas.height = img.height;
-
-          // Draw uploaded photo
-          ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-
-          // Draw frame on top
-          if (frame.complete) {
-            ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-          } else {
-            frame.onload = () => {
-              ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-            };
-          }
-
-          // Show download button
+          uploadedImg = img;
+          drawImage();
           downloadBtn.style.display = "inline-block";
         };
         img.src = event.target.result;
       };
       reader.readAsDataURL(file);
+    });
+
+    zoomSlider.addEventListener("input", (e) => {
+      scale = parseFloat(e.target.value);
+      drawImage();
     });
 
     downloadBtn.addEventListener("click", () => {
