--- a/index.html
+++ b/index.html
@@ -155,69 +155,135 @@
   </footer>
 
   <script>
-    const upload = document.getElementById("upload");
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    const downloadBtn = document.getElementById("downloadBtn");
-    const zoomSlider = document.getElementById("zoom");
+const upload = document.getElementById("upload");
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+const downloadBtn = document.getElementById("downloadBtn");
+const zoomSlider = document.getElementById("zoom");
 
-    let uploadedImg = null;
-    let frame = new Image();
-    frame.src = "frame.png"; // Your frame file in same folder
-    let scale = 1;
+let uploadedImg = null;
+let frame = new Image();
+frame.src = "frame.png"; // Your frame file
+let scale = 1;
 
-    function drawImage() {
-      if (!uploadedImg) return;
+// For drag movement
+let offsetX = 0;
+let offsetY = 0;
+let isDragging = false;
+let startX, startY;
 
-      // Determine square size (smallest of width/height)
-      const size = Math.min(uploadedImg.width, uploadedImg.height);
-      const sx = (uploadedImg.width - size / scale) / 2;
-      const sy = (uploadedImg.height - size / scale) / 2;
-      const drawSize = size;
+function drawImage() {
+  if (!uploadedImg) return;
 
-      canvas.width = drawSize;
-      canvas.height = drawSize;
+  const size = Math.min(uploadedImg.width, uploadedImg.height);
+  canvas.width = size;
+  canvas.height = size;
 
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(uploadedImg, sx, sy, size / scale, size / scale, 0, 0, drawSize, drawSize);
+  const sx = ((uploadedImg.width - size / scale) / 2) - offsetX;
+  const sy = ((uploadedImg.height - size / scale) / 2) - offsetY;
+  const drawSize = size;
 
-      if (frame.complete) {
-        ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-      } else {
-        frame.onload = () => {
-          ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-        };
-      }
-    }
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.drawImage(
+    uploadedImg,
+    sx, sy,
+    size / scale,
+    size / scale,
+    0, 0,
+    drawSize,
+    drawSize
+  );
 
-    upload.addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
+  if (frame.complete) {
+    ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+  } else {
+    frame.onload = () => {
+      ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+    };
+  }
+}
 
-      const reader = new FileReader();
-      reader.onload = function(event) {
-        const img = new Image();
-        img.onload = function() {
-          uploadedImg = img;
-          drawImage();
-          downloadBtn.style.display = "inline-block";
-        };
-        img.src = event.target.result;
-      };
-      reader.readAsDataURL(file);
-    });
+// Handle file upload
+upload.addEventListener("change", (e) => {
+  const file = e.target.files[0];
+  if (!file) return;
 
-    zoomSlider.addEventListener("input", (e) => {
-      scale = parseFloat(e.target.value);
+  const reader = new FileReader();
+  reader.onload = function(event) {
+    const img = new Image();
+    img.onload = function() {
+      uploadedImg = img;
+      offsetX = 0;
+      offsetY = 0;
       drawImage();
-    });
+      downloadBtn.style.display = "inline-block";
+    };
+    img.src = event.target.result;
+  };
+  reader.readAsDataURL(file);
+});
 
-    downloadBtn.addEventListener("click", () => {
-      const link = document.createElement("a");
-      link.download = "framed-photo.png";
-      link.href = canvas.toDataURL("image/png");
-      link.click();
-    });
-  </script>
+// Zoom slider
+zoomSlider.addEventListener("input", (e) => {
+  scale = parseFloat(e.target.value);
+  drawImage();
+});
+
+// Mouse events for dragging
+canvas.addEventListener("mousedown", (e) => {
+  isDragging = true;
+  startX = e.offsetX;
+  startY = e.offsetY;
+});
+
+canvas.addEventListener("mousemove", (e) => {
+  if (!isDragging) return;
+  const dx = (e.offsetX - startX) / scale;
+  const dy = (e.offsetY - startY) / scale;
+  offsetX -= dx;
+  offsetY -= dy;
+  startX = e.offsetX;
+  startY = e.offsetY;
+  drawImage();
+});
+
+canvas.addEventListener("mouseup", () => { isDragging = false; });
+canvas.addEventListener("mouseleave", () => { isDragging = false; });
+
+// Touch events for mobile drag
+canvas.addEventListener("touchstart", (e) => {
+  isDragging = true;
+  const touch = e.touches[0];
+  startX = touch.clientX - canvas.getBoundingClientRect().left;
+  startY = touch.clientY - canvas.getBoundingClientRect().top;
+});
+
+canvas.addEventListener("touchmove", (e) => {
+  if (!isDragging) return;
+  e.preventDefault();
+  const touch = e.touches[0];
+  const currentX = touch.clientX - canvas.getBoundingClientRect().left;
+  const currentY = touch.clientY - canvas.getBoundingClientRect().top;
+  const dx = (currentX - startX) / scale;
+  const dy = (currentY - startY) / scale;
+  offsetX -= dx;
+  offsetY -= dy;
+  startX = currentX;
+  startY = currentY;
+  drawImage();
+});
+
+canvas.addEventListener("touchend", () => { isDragging = false; });
+canvas.addEventListener("touchcancel", () => { isDragging = false; });
+
+// Download button
+downloadBtn.addEventListener("click", () => {
+  const link = document.createElement("a");
+  link.download = "framed-photo.png";
+  link.href = canvas.toDataURL("image/png");
+  link.click();
+});
+</script>
+
 </body>
 </html>
