--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ let frame = new Image();
 frame.src = "frame.png"; // Your frame file
 let scale = 1;
 
-// For drag movement
+// Drag variables
 let offsetX = 0;
 let offsetY = 0;
 let isDragging = false;
@@ -179,9 +179,8 @@ function drawImage() {
   canvas.width = size;
   canvas.height = size;
 
-  const sx = ((uploadedImg.width - size / scale) / 2) - offsetX;
-  const sy = ((uploadedImg.height - size / scale) / 2) - offsetY;
-  const drawSize = size;
+  const sx = ((uploadedImg.width - size / scale) / 2) + offsetX;
+  const sy = ((uploadedImg.height - size / scale) / 2) + offsetY;
 
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   ctx.drawImage(
@@ -190,8 +189,8 @@ function drawImage() {
     size / scale,
     size / scale,
     0, 0,
-    drawSize,
-    drawSize
+    size,
+    size
   );
 
   if (frame.complete) {
@@ -203,7 +202,7 @@ function drawImage() {
   }
 }
 
-// Handle file upload
+// Upload photo
 upload.addEventListener("change", (e) => {
   const file = e.target.files[0];
   if (!file) return;
@@ -229,54 +228,52 @@ zoomSlider.addEventListener("input", (e) => {
   drawImage();
 });
 
-// Mouse events for dragging
+// Mouse drag
 canvas.addEventListener("mousedown", (e) => {
   isDragging = true;
   startX = e.offsetX;
   startY = e.offsetY;
 });
-
 canvas.addEventListener("mousemove", (e) => {
   if (!isDragging) return;
   const dx = (e.offsetX - startX) / scale;
   const dy = (e.offsetY - startY) / scale;
-  offsetX -= dx;
-  offsetY -= dy;
+  offsetX += dx;
+  offsetY += dy;
   startX = e.offsetX;
   startY = e.offsetY;
   drawImage();
 });
-
 canvas.addEventListener("mouseup", () => { isDragging = false; });
 canvas.addEventListener("mouseleave", () => { isDragging = false; });
 
-// Touch events for mobile drag
+// Touch drag
 canvas.addEventListener("touchstart", (e) => {
   isDragging = true;
   const touch = e.touches[0];
-  startX = touch.clientX - canvas.getBoundingClientRect().left;
-  startY = touch.clientY - canvas.getBoundingClientRect().top;
+  const rect = canvas.getBoundingClientRect();
+  startX = touch.clientX - rect.left;
+  startY = touch.clientY - rect.top;
 });
-
 canvas.addEventListener("touchmove", (e) => {
   if (!isDragging) return;
   e.preventDefault();
   const touch = e.touches[0];
-  const currentX = touch.clientX - canvas.getBoundingClientRect().left;
-  const currentY = touch.clientY - canvas.getBoundingClientRect().top;
+  const rect = canvas.getBoundingClientRect();
+  const currentX = touch.clientX - rect.left;
+  const currentY = touch.clientY - rect.top;
   const dx = (currentX - startX) / scale;
   const dy = (currentY - startY) / scale;
-  offsetX -= dx;
-  offsetY -= dy;
+  offsetX += dx;
+  offsetY += dy;
   startX = currentX;
   startY = currentY;
   drawImage();
 });
-
 canvas.addEventListener("touchend", () => { isDragging = false; });
 canvas.addEventListener("touchcancel", () => { isDragging = false; });
 
-// Download button
+// Download photo
 downloadBtn.addEventListener("click", () => {
   const link = document.createElement("a");
   link.download = "framed-photo.png";
